--- a/src/epub/text/the-level-business-head.xhtml
+++ b/src/epub/text/the-level-business-head.xhtml
@@ -10,16 +10,16 @@
 			<h2 epub:type="title">The Level Business Head</h2>
 			<p>Another beaker of port, laddie?” urged Stanley Featherstonehaugh Ukridge, hospitably.</p>
 			<p>“Thanks.”</p>
-			<p>“One more stoup of port for Mr. Corcoran, Baxter. You may bring the coffee, cigars, and liqueurs to us in the library in about a quarter of an hour.”</p>
+			<p>“One more stoup of port for Mr. Corcoran, Baxter. You may bring the coffee, cigars, and liqueurs to us in the library in about a quarter of an hour.”</p>
 			<p>The butler filled my glass and melted away. I looked about me dizzily. We were seated in the spacious dining-room of Ukridge’s Aunt Julia’s house on Wimbledon Common. A magnificent banquet had wound its way to a fitting finish, and the whole thing seemed to me inexplicable.</p>
 			<p>“I don’t understand this,” I said. “How do I come to be sitting here, bursting with rich food paid for by your aunt?”</p>
 			<p>“Perfectly simple, laddie. I expressed a desire for your company to-night, and she at once consented.”</p>
 			<p>“But why? She has never let you invite me here before. She can’t stand me.”</p>
 			<p>Ukridge sipped his port.</p>
-			<p>“Well, the fact of the matter is, Corky,” he said, in a burst of confidence, “things have been occurring recently in the home which have resulted in what you might call the dawning of a new life as far as Aunt Julia and I are concerned. It is not too much to say that she now eats out of my hand and is less than the dust beneath my chariot wheels. I will tell you the story, for it will be of help to you in your journey through the world. It is a story which shows that, be the skies never so black, nothing can harm a man provided that he has a level business head. Tempests may lour—”</p>
+			<p>“Well, the fact of the matter is, Corky,” he said, in a burst of confidence, “things have been occurring recently in the home which have resulted in what you might call the dawning of a new life as far as Aunt Julia and I are concerned. It is not too much to say that she now eats out of my hand and is less than the dust beneath my chariot wheels. I will tell you the story, for it will be of help to you in your journey through the world. It is a story which shows that, be the skies never so black, nothing can harm a man provided that he has a level business head. Tempests may lour⁠—”</p>
 			<p>“Get on with it. How did all this happen?”</p>
 			<p>Ukridge mused for awhile.</p>
-			<p>“I suppose the thing really started,” he said, “when I pawned her brooch—”</p>
+			<p>“I suppose the thing really started,” he said, “when I pawned her brooch⁠—”</p>
 			<p>“You pawned your aunt’s brooch?”</p>
 			<p>“Yes.”</p>
 			<p>“And that endeared you to her?”</p>
@@ -58,7 +58,7 @@
 			<p>“Stanley,” she said to me, “I nearly forgot. I want you to look in at Murgatroyd’s, in Bond Street, to-morrow and get my diamond brooch. They are re-setting it. Bring it back and put it in my bureau drawer. Here is the key. Lock the drawer and send the key to me by registered post.”</p>
 			<p>And so, you see, everything was most satisfactorily settled. Long before my aunt came back the Waterloo Cup would be run for, and I should have acquired vast affluence. All I had to do was to have a duplicate key made, so that I could put the brooch in the drawer when I had redeemed it. I could see no flaw in the scheme of things. I saw her off at Euston, sauntered round to Murgatroyd’s, collected the brooch, sauntered off to the pawnbroker’s, put the brooch up the spout, and walked out, for the first time in many weeks in a sound financial position. I rang up Joe the Lawyer on the ’phone, closed the deal about the dog, and there I was, with my foot on the ladder of Fortune.</p>
 			<hr/>
-			<p>Butin this world, Corky, you never know. That is the thing I always try to impress on every young fellow starting out in life—that you never know. It was about two days later that the butler came to me in the garden and said a gentleman wished to speak to me on the ’phone.</p>
+			<p>Butin this world, Corky, you never know. That is the thing I always try to impress on every young fellow starting out in life⁠—that you never know. It was about two days later that the butler came to me in the garden and said a gentleman wished to speak to me on the ’phone.</p>
 			<p>I shall always remember that moment. It was a lovely, still evening, and I was sitting in the garden under a leafy tree, thinking beautiful thoughts. The sun was setting in a blaze of gold and crimson; the little birds were chirping their heads off; and I was half-way through the whisky-and-soda of a lifetime. I recollect that, an instant before Baxter came out to fetch me, I had just been thinking how peaceful and wonderful and perfect the world was.</p>
 			<p>I went to the ’phone.</p>
 			<p>“Hullo!” said a voice.</p>
@@ -108,12 +108,12 @@
 			<p>It went well, but not quite well enough.</p>
 			<p>“No,” she said, “I must have the brooch. I’ve set my heart on it. We must break the lock.”</p>
 			<p>“I couldn’t dream of such a thing,” I said firmly. “I am in a position of trust. I cannot break up my aunt’s furniture.”</p>
-			<p>“Oh, but—”</p>
+			<p>“Oh, but⁠—”</p>
 			<p>“No.”</p>
 			<p>Well, laddie, there ensued a pretty painful scene. Hell hath no fury like a woman scorned, and not many like a woman who wants a brooch and isn’t allowed to get it. The atmosphere, when we parted, was full of strain.</p>
 			<p>“I shall write to Miss Ukridge and tell her exactly what has happened,” said the poetess, pausing at the front door.</p>
 			<p>She then shoved off, leaving me limp and agitated. These things take it out of a fellow.</p>
-			<p>Something, I perceived, had got to be done, and done swiftly. From some source I had to raise fifty quid. But where could I turn? My credit, Corky—and I tell you this frankly, as an old friend—is not good. No, it is not good. In all the world there seemed to be but one man who might be induced to let me have fifty quid at a pinch, and that was Joe the Lawyer. I don’t say I was relying on him, mind you. But the broad, fundamental thing, when you’re trying to borrow fifty quid, is to begin by fixing on someone who has got fifty quid. I knew that Joe had it, because I had given it to him. And it seemed to me that, if there was a spark of human feeling in his bosom, he might, after a good deal of eloquence, be persuaded to help an old business colleague out of a very tight place.</p>
+			<p>Something, I perceived, had got to be done, and done swiftly. From some source I had to raise fifty quid. But where could I turn? My credit, Corky⁠—and I tell you this frankly, as an old friend⁠—is not good. No, it is not good. In all the world there seemed to be but one man who might be induced to let me have fifty quid at a pinch, and that was Joe the Lawyer. I don’t say I was relying on him, mind you. But the broad, fundamental thing, when you’re trying to borrow fifty quid, is to begin by fixing on someone who has got fifty quid. I knew that Joe had it, because I had given it to him. And it seemed to me that, if there was a spark of human feeling in his bosom, he might, after a good deal of eloquence, be persuaded to help an old business colleague out of a very tight place.</p>
 			<p>At any rate, he was the only relief in sight, so I rang up his office; and, finding that he would be at the Lewes Races next day, I took an early train there.</p>
 			<hr/>
 			<p>Well, Corky, I might have known. It stands to reason that, if a man has a spark of human feeling in his bosom, he does not become a bookie. I stood beside this bloke, Joe the Lawyer, from the start of the two o’clock race to the finish of the four-thirty, watching him rake in huge sums from mugs of every description until his satchel was simply bursting with cash; but when I asked him for the loan of a measly fifty pounds he didn’t even begin to look like parting.</p>
@@ -123,7 +123,7 @@
 			<p>“Having all the boys saying I was a soft-hearted fool.”</p>
 			<p>“A man of your stamp doesn’t care what fellows like that say,” I urged. “You’re too big. You can afford to despise them.”</p>
 			<p>“Well, I can’t afford to lend any fifty quids. I’d never hear the last of it.”</p>
-			<p>I simply can’t understand this terror of public opinion. Morbid, I call it. I told him I would keep the thing a dead secret—and, if he thought it safer, not even give him a line in writing to acknowledge the debt; but no, there was no tempting him.</p>
+			<p>I simply can’t understand this terror of public opinion. Morbid, I call it. I told him I would keep the thing a dead secret⁠—and, if he thought it safer, not even give him a line in writing to acknowledge the debt; but no, there was no tempting him.</p>
 			<p>“I’ll tell you what I will do,” he said.</p>
 			<p>“Twenty quid?”</p>
 			<p>“No, not twenty quid. Nor ten quid, either. Nor five quid. Nor one quid. But I’ll give you a lift back as far as Sandown in my car to-morrow, that’s what I’ll do.”</p>
@@ -147,8 +147,8 @@
 			<p>“Ah! Well, he had to tell him, of course. He just handed him his money back. And there he was, a couple of hundred quid in hand. He’s wide, Joe is.”</p>
 			<p>Have you ever experienced, Corky, that horrible sensation of having all your ideals totter and melt away, leaving you in a world of hideous blackness where it seems impossible to trust your fellow-man an inch? What do you mean, my aunt must often have felt that way? I resent these slurs, Corky. Whenever I have had occasion to pinch anything from my aunt, it has always been with the most scrupulous motives, with the object of collecting a little ready cash in order to lay the foundations of a vast fortune.</p>
 			<p>This was an entirely different matter. This fiend in human shape had had no thought but of self. Not content with getting fifty quid out of me and sticking to it like glue, he had deliberately tricked me into accepting five pounds for all rights in a dead dog which he knew was shortly about to bring him in a couple of hundred. Was it fair? Was it just?</p>
-			<p>And the terrible part of the whole thing was that there seemed nothing that I could do about it. I couldn’t even reproach him. At least, I could—but a fat lot of help that would have been. All I could do was to save my train-fare home by accepting a lift in his car.</p>
-			<p>I am bound to say, Corky—and this will show you how a man’s moral outlook may deteriorate through contact with fellows of this stamp—I am bound to say that there were moments during the night when I toyed with the thought of taking a dip into that satchel of his, should the opportunity occur during the journey. But I dismissed the plan as unworthy of me. Whatever the injuries I had sustained, my hands at least, please Heaven, should be clean. Besides, it seemed very improbable that an opportunity would occur.</p>
+			<p>And the terrible part of the whole thing was that there seemed nothing that I could do about it. I couldn’t even reproach him. At least, I could⁠—but a fat lot of help that would have been. All I could do was to save my train-fare home by accepting a lift in his car.</p>
+			<p>I am bound to say, Corky⁠—and this will show you how a man’s moral outlook may deteriorate through contact with fellows of this stamp⁠—I am bound to say that there were moments during the night when I toyed with the thought of taking a dip into that satchel of his, should the opportunity occur during the journey. But I dismissed the plan as unworthy of me. Whatever the injuries I had sustained, my hands at least, please Heaven, should be clean. Besides, it seemed very improbable that an opportunity would occur.</p>
 			<p>And, sure enough, I noticed next morning, when we started out, that he kept the satchel wedged in between him and the side of the car, entirely out of my reach. He was that sort of man.</p>
 			<hr/>
 			<p>How strange it is, Corky, that in this world we seem fated never to be able to enjoy life to the full! No doubt it is all for a purpose, and is intended to make us more spiritual and fit us for the life to come; but it is a nuisance. Take my case. I am particularly fond of motoring; and circumstances have so ordered themselves that it is only occasionally that I am able to get a ride. And here I was, bowling along the high road on an ideal motoring day, totally unable to enjoy the experience.</p>
@@ -178,7 +178,7 @@
 			<p>The dog left the satchel and came to the gate. He shoved his nose as far through the bars as he could manage, and made a noise like a saxophone.</p>
 			<p>“Now you’ve done it,” I said.</p>
 			<hr/>
-			<p>And so he had, and I was glad, Corky. It pleased me sincerely to find a man who prided himself on his acumen capable of such perfectly cloth-headed behaviour. Here was this blighter, admired by all—provided they didn’t have business dealings with him—for his wideness, breaking down lamentably in the first crisis where he was called upon to show a little ordinary intelligence. He had allowed himself to be out-generalled by a humble unit of the animal kingdom, and I had no sympathy for him.</p>
+			<p>And so he had, and I was glad, Corky. It pleased me sincerely to find a man who prided himself on his acumen capable of such perfectly cloth-headed behaviour. Here was this blighter, admired by all⁠—provided they didn’t have business dealings with him⁠—for his wideness, breaking down lamentably in the first crisis where he was called upon to show a little ordinary intelligence. He had allowed himself to be out-generalled by a humble unit of the animal kingdom, and I had no sympathy for him.</p>
 			<p>However, I didn’t say so. One must be diplomatic. I had not altogether given up hope of floating that loan, and anything in the nature of frivolous comment would, I felt, have the worst effect on the negotiations.</p>
 			<p>“What’ll I do?” said Joe, after a few general remarks.</p>
 			<p>“Better shout,” I suggested.</p>
@@ -205,7 +205,7 @@
 			<p>“I soothed the dog.”</p>
 			<p>“If you like to waste your time playing with dogs, that’s your business. I’d look silly, wouldn’t I, giving you fifty quid for playing with dogs? But, if you like doing it, you go on playing with him while I step down the road and get some water from one of those other cottages.”</p>
 			<p>Black-hearted. That, Corky, is the only adjective. It seemed to me at that moment as though this bloke Joe had allowed me to peer into his soul; and it was like looking into a dark cellar on a moonless night.</p>
-			<p>“Here, I say—” I began, but he had gone.</p>
+			<p>“Here, I say⁠—” I began, but he had gone.</p>
 			<hr/>
 			<p>How long I stood there I don’t know. But, though it seemed a lifetime, it couldn’t really have been long, for Joe didn’t come back with the water; and a faint hope began to steal over me that he had found another dog at one of the other cottages and was now being bitten to the bone. And then I heard footsteps.</p>
 			<p>I looked round. A cove was approaching.</p>
@@ -226,14 +226,14 @@
 			<p>“Buy my dog?”</p>
 			<p>“Yes.”</p>
 			<p>“You can have him for five shillings.”</p>
-			<p>Now, as I said before, Corky, you know me. You know that the reason why one of these days I shall make an enormous fortune and retire to spend the evening of my life in affluence is that I have that strange knack, which is given to so few men, of seizing opportunity when it calls. An ordinary mutton-headed fellow like you—I use the expression without any intention of offence—would undoubtedly at this juncture have raised his voice a trifle and explained to this bearded cove that the intricacies of the English language had led him into a pardonable error.</p>
+			<p>Now, as I said before, Corky, you know me. You know that the reason why one of these days I shall make an enormous fortune and retire to spend the evening of my life in affluence is that I have that strange knack, which is given to so few men, of seizing opportunity when it calls. An ordinary mutton-headed fellow like you⁠—I use the expression without any intention of offence⁠—would undoubtedly at this juncture have raised his voice a trifle and explained to this bearded cove that the intricacies of the English language had led him into a pardonable error.</p>
 			<p>But did I? No, I did not. For, even as he spoke, an idea exploded in my brain like a bomb.</p>
 			<p>“Done!” I cried.</p>
 			<p>“Ah?”</p>
 			<p>“Here’s your five bob. Whistle to the dog.”</p>
 			<p>He whistled, and the dog came running up. And, having massaged his ribs awhile, I picked him up and shoved him inside the car and banged the door. And then I saw Joe the Lawyer plodding up the road, slopping water from a big pail.</p>
 			<p>“I got it,” he said.</p>
-			<p>He went round and unscrewed the cap of the radiator and was starting to pour the water in, when the dog barked. Joe looked up, saw him, and dropped the pail—happily over his trousers.</p>
+			<p>He went round and unscrewed the cap of the radiator and was starting to pour the water in, when the dog barked. Joe looked up, saw him, and dropped the pail⁠—happily over his trousers.</p>
 			<p>“Who put that dog in the car?” he said.</p>
 			<p>“I did. I’ve bought him.”</p>
 			<p>“Then you can damn well take him out.”</p>
@@ -256,7 +256,7 @@
 			<p>“Thanks,” I said. “Well, good-bye.”</p>
 			<p>He seemed to be waiting for something.</p>
 			<p>“Good-bye,” I said again. “I don’t want to hurt your feelings, laddie, but I must decline to continue in your society. We are nearing civilization now, and at any moment some friend of mine might see me in your car, which would jeopardize my social prestige. I will walk to the nearest railway station.”</p>
-			<p>“But, gawblimey—!”</p>
+			<p>“But, gawblimey⁠—!”</p>
 			<p>“Now what?”</p>
 			<p>“Aren’t you going to take that dog out of the car?” he said, specifying what sort of a dog it was in his opinion. He also added a few remarks in a derogatory spirit about myself.</p>
 			<p>“Me?” I said. “Why? I simply sold him to you. My part in the transaction is ended.”</p>
@@ -287,7 +287,7 @@
 			<p>“Because I respected your property too much.”</p>
 			<p>“Indeed? I incline to think that it was because you knew the brooch was not there.”</p>
 			<p>“I don’t understand.”</p>
-			<p>“I, on the contrary, did—the moment I received Miss Vining’s letter. I saw it all. You pawned that brooch, Stanley! I know you so well.”</p>
+			<p>“I, on the contrary, did⁠—the moment I received Miss Vining’s letter. I saw it all. You pawned that brooch, Stanley! I know you so well.”</p>
 			<p>I drew myself up.</p>
 			<p>“You cannot know me very well, Aunt Julia,” I said, coldly, “if you think that of me. And allow me to say, while on this subject, that your suspicions are unworthy of an aunt.”</p>
 			<p>“Never mind what they’re unworthy of. Open that drawer.”</p>
@@ -306,7 +306,7 @@
 			<p>She gulped pretty freely.</p>
 			<p>“Stanley,” she said at last, “I wronged you.”</p>
 			<p>“You did.”</p>
-			<p>“I—I—well, I’m sorry.”</p>
+			<p>“I⁠—I⁠—well, I’m sorry.”</p>
 			<p>“You may well be, Aunt Julia,” I said.</p>
 			<p>And, pursuing my advantage, I ground the woman into apologetic pulp beneath what practically amounted to an iron heel. And in that condition, Corky, she still remains. How long it will last one cannot say, but for the time being I am the blue-eyed boy and I have only to give utterance to my lightest whim to have her jump six feet to fulfil it. So, when I said I wanted to ask you to dinner here to-night, she practically smiled. Let us go into the library, old horse, and trifle with the cigars. They are some special ones I had sent up from that place in Piccadilly.</p>
 		</article>
